--- a/style.css
+++ b/style.css
@@ -140,6 +140,15 @@ img {
   background: #B07DFB;
 }
 
+@keyframes seta{
+  from {
+    right: 30px;
+  }
+  to {
+    right: 20px;
+  }
+}
+
 @media (max-width: 760px){
   .sidenav ul {
     display: flex;
@@ -150,8 +159,20 @@ img {
   }
 
   .sidenav {
+    position: relative;
     padding: 0 30px;
     overflow-x: scroll;
+  }
+
+  .sidenav::after {
+    content: '➡';
+    color: #B07DFB;
+    font-size: 1.25em;
+    position: absolute;
+    top: 135px;
+    right: 20px;
+    animation: seta .6s ease-in 0s infinite alternate;
+
   }
 
   .sidenav li a {
