--- a/style.css
+++ b/style.css
@@ -205,6 +205,12 @@ img {
   align-self: end;
 }
 
+@media (max-width: 600px){
+  .content {
+    grid-template-columns: auto;
+  }
+}
+
 /* ESTILOS CONTENT */
 
 p {
@@ -315,6 +321,7 @@ p {
   align-content: start;
   padding: 30px;
   gap: 30px;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
 }
 
 /* FOOTER */
