--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+:root {
+  --roxo-forte: #0400f1;
+  --roxo-fraco: #7da5fb;
+}
+
 body,
 p,
 h1,
@@ -64,7 +69,7 @@ img {
 
 .header {
   grid-area: header;
-  background: linear-gradient(135deg, #8844ee, #B07DFB);
+  background: linear-gradient(135deg, var(--roxo-forte), var(--roxo-fraco));
   padding: 30px;
   display: grid;
   grid-template-columns: 1fr  auto;
@@ -124,6 +129,15 @@ img {
   padding: 30px;
 }
 
+.sidenav li {
+  transition: .5s ease-in;
+
+}
+
+.sidenav li:hover{
+  transform: scale(1.1);
+}
+
 .sidenav li a {
   display: block;
   min-width: 60px;
@@ -137,7 +151,8 @@ img {
 }
 
 .sidenav li a:hover {
-  background: #B07DFB;
+  background: var(--roxo-fraco);
+  box-shadow: 5px 5px 15px 0 var(--roxo-forte);
 }
 
 @keyframes seta{
@@ -166,7 +181,7 @@ img {
 
   .sidenav::after {
     content: '➡';
-    color: #B07DFB;
+    color: var(--roxo-fraco);
     font-size: 1.25em;
     position: absolute;
     top: 135px;
@@ -227,7 +242,7 @@ p {
 /* TITULO */
 
 .titulo {
-  color: #B07DFB;
+  color: var(--roxo-fraco);
 }
 
 .titulo h1 {
@@ -249,7 +264,7 @@ p {
 .caracteristicas > div {
   width: 80px;
   text-align: center;
-  background: linear-gradient(135deg, #8844ee, #B07DFB);
+  background: linear-gradient(135deg, var(--roxo-forte), var(--roxo-fraco));
   border-radius: 5px;
   box-shadow: 5px 5px 15px 0px rgba(44,44,44,0.15);
   position: relative;
@@ -261,11 +276,11 @@ p {
 
 .caracteristicas span {
   display: block;
-  color: #B07DFB;
+  color: var(--roxo-fraco);
 }
 
 .numero {
-  color: #B07DFB;
+  color: var(--roxo-fraco);
   font-size: 3em;
   line-height: 1;
   margin: 10px auto;
@@ -281,7 +296,7 @@ p {
 
 .destaque {
   font-size: 0.875em;
-  color: #B07DFB;
+  color: var(--roxo-fraco);
   max-width: 16em;
 }
 
@@ -290,7 +305,7 @@ p {
   padding: 30px;
   border-radius: 5px;
   box-shadow: 5px 5px 15px 0px rgba(44,44,44,0.15);
-  background: linear-gradient(135deg, #8844ee, #B07DFB);
+  background: linear-gradient(135deg, var(--roxo-forte), var(--roxo-fraco));
 }
 
 .citacao p {
@@ -310,7 +325,7 @@ p {
 }
 
 .atributos li + li {
-  border-top: 2px solid #B07DFB;
+  border-top: 2px solid var(--roxo-fraco);
 }
 /* ANUNCIOS */
 
@@ -328,7 +343,7 @@ p {
 
 .footer {
   grid-area: footer;
-  background: linear-gradient(135deg, #8844ee, #B07DFB);
+  background: linear-gradient(135deg, var(--roxo-forte), var(--roxo-fraco));
 }
 
 .footer p {
