--- a/login.css
+++ b/login.css
@@ -22,8 +22,21 @@ button:hover {
 }
 
 #email, #passwd {
+  color:#7da5fb;
   width: 80%;
   margin-bottom: 15px;
+}
+
+@media (max-width: 760px){
+  #email, #passwd {
+    color:#7da5fb;
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  #btnEntrar {
+    width: 100%;
+    margin: 30px 0 0 0;
+  }
 }
 
 input[type="email"], input[type="password"] {
@@ -38,14 +51,14 @@ input[type="email"], input[type="password"] {
 }
 
 input[type="email"]::placeholder, input[type="password"]::placeholder {
-  color: #7da5fb;
+  color: #7da5fb8f;
   font-size: 1em;
   font-style: italic;
   padding:2px 5px;
 
 }
 
-input[type="email"]:focus {
+input[type="email"]:focus, input[type="password"] {
   color: #7da5fb;
   outline: none;
   border-bottom: 1px solid #7da5fb;
