--- a/login.css
+++ b/login.css
@@ -1,5 +1,4 @@
 
-
 button {
   display: block;
   padding: 10px;
@@ -11,9 +10,9 @@ button {
   transition: 0.3s;
 }
 
-#btnEntrar {
+#btnEntrar, #btnCadastrar {
   width: 80%;
-  margin: 60px 0 0 0;
+  margin: 20px 0 20px 0;
 }
 
 button:hover {
@@ -21,25 +20,25 @@ button:hover {
   cursor: pointer;
 }
 
-#email, #passwd {
+#name, #email, #passwd, #checkPasswd {
   color:#7da5fb;
   width: 80%;
   margin-bottom: 40px;
 }
 
 @media (max-width: 760px){
-  #email, #passwd {
+  #name, #email, #passwd, #checkPasswd {
     color:#7da5fb;
     width: 100%;
     margin-bottom: 20px;
   }
-  #btnEntrar {
+  #btnEntrar, #btnCadastrar {
     width: 100%;
-    margin: 30px 0 0 0;
+    margin: 100px 0 0 0;
   }
 }
 
-input[type="email"], input[type="password"] {
+input[type="text"], input[type="email"], input[type="password"] {
   font-size: 1.5em;
   border-radius: 5px;
   color: hsl(221, 94%, 74%);
@@ -50,19 +49,17 @@ input[type="email"], input[type="password"] {
   outline: none;
 }
 
-input[type="email"]::placeholder, input[type="password"]::placeholder {
+input[type="text"]::placeholder, input[type="email"]::placeholder, input[type="password"]::placeholder {
   color: #7da5fb8f;
   font-size: 1em;
   font-style: italic;
   padding:2px 5px;
-
 }
 
-input[type="email"]:focus, input[type="password"] {
+input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focus {
   color: #7da5fb;
   outline: none;
   border-bottom: 1px solid #7da5fb;
-
 }
 
 .content {
