--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -70,3 +70,9 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
   display: grid;
   grid-template-columns: 1fr;
 }
+
+@media (max-width: 760px){
+  .header {
+    padding: 15px;
+  }
+}
