--- a/css/login.css
+++ b/css/login.css
@@ -36,6 +36,9 @@ button:hover {
     width: 100%;
     margin: 100px 0 0 0;
   }
+  .header {
+    padding: 15px;
+  }
 }
 
 input[type="text"], input[type="email"], input[type="password"] {
