--- a/css/login.css
+++ b/css/login.css
@@ -1,7 +1,7 @@
 
 button {
   display: block;
-  padding: 10px;
+  padding: 15px;
   color: white;
   font-size: 1.25em;
   background: #7da5fb;
@@ -12,7 +12,7 @@ button {
 
 #btnEntrar, #btnCadastrar {
   width: 80%;
-  margin: 20px 0 20px 0;
+  margin: 20px 0 30px 0;
 }
 
 button:hover {
@@ -38,6 +38,9 @@ button:hover {
   }
   .header {
     padding: 15px;
+  }
+  buttom {
+    padding: 10px;
   }
 }
 
