--- a/css/login.css
+++ b/css/login.css
@@ -34,7 +34,7 @@ button:hover {
   }
   #btnEntrar, #btnCadastrar {
     width: 100%;
-    margin: 100px 0 0 0;
+    margin: 100px 0 50px 0;
   }
   .header {
     padding: 15px;
