--- a/css/login.css
+++ b/css/login.css
@@ -26,22 +26,8 @@ button:hover {
   margin-bottom: 40px;
 }
 
-@media (max-width: 760px){
-  #name, #email, #passwd, #checkPasswd {
-    color:#7da5fb;
-    width: 100%;
-    margin-bottom: 20px;
-  }
-  #btnEntrar, #btnCadastrar {
-    width: 100%;
-    margin: 100px 0 50px 0;
-  }
-  .header {
-    padding: 15px;
-  }
-  buttom {
-    padding: 10px;
-  }
+.footer {
+  margin-top: 312px;
 }
 
 input[type="text"], input[type="email"], input[type="password"] {
@@ -76,3 +62,25 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
   display: grid;
   grid-template-columns: 1fr;
 }
+
+@media (max-width: 760px){
+  #name, #email, #passwd, #checkPasswd {
+    color:#7da5fb;
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  #btnEntrar, #btnCadastrar {
+    width: 100%;
+    margin: 100px 0 50px 0;
+  }
+  .header {
+    padding: 15px;
+  }
+  buttom {
+    padding: 10px;
+  }
+  .footer {
+    margin-top: 150px;
+  }
+}
+
